test/official_tests/function/extra_arguments.lox
fun f(a, b) {
  print a;
  print b;
}

f(1, 2, 3, 4); // error: {"line":6,"message":"Function 'f' expected 2 arguments but got 4","type":"RuntimeError"}
